descomplicando-kubernetes/day-13/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "2" #limita a quantidade de requisições por segundo
    nginx.ingress.kubernetes.io/rewrite-target: / #redireciona a requisição para a raiz
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8s-linuxtips.ccimoveisgarca.com.br
    secretName: k8s-linuxtips.ccimoveisgarca.com.br-tls
  rules:
  - host: k8s-linuxtips.ccimoveisgarca.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
